--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,12 @@
+# https://thoughtbot.com/blog/love-hate-tmux
+
+# act like screen
+# use ctrl+a to enter command mode
+unbind C-b
+set -g prefix C-a
+
 # act like vim
+# move between panes with ctrl+a hjkl
 setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
@@ -6,17 +14,27 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+
+# https://www.rushiagr.com/blog/2016/06/16/everything-you-need-to-know-about-tmux-copy-pasting-ubuntu/
+# enter copy mode with ctrl+a [
+# use vim keys to more around
+# start selecting with v and copy with y (yank)
+# paste from tmux buffer with ctrl+a p
+# must install xclip to copy to system clipboard
+#    sudo apt-get install xclip
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+bind-key -T copy-mode-vi r send-keys -X nd | split-window -h
+
+# split window into panes with ctrl+a | or -
 bind | split-window -h
 bind - split-window
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
 unbind p
 bind p paste-buffer
 
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
-
-# look good
-set -g default-terminal "screen-256color"
-
